--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.ThirdFragment">
+    tools:context=".Fragment.ThirdFragment"
+    android:background="#029112">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
