--- a/app/src/main/res/menu/bottombar_menu.xml
+++ b/app/src/main/res/menu/bottombar_menu.xml
@@ -4,20 +4,20 @@
 
     <item
         android:id="@+id/menuitem_bottombar_up"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="Up"
+        android:icon="@drawable/ic_user"
+        android:title="ID Identification"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/menuitem_bottombar_down"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="Down"
+        android:icon="@drawable/ic_search"
+        android:title="CandiDate Info"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/menuitem_bottombar_search"
-        android:icon="@drawable/ic_launcher_background"
-        android:title="Search"
+        android:icon="@drawable/ic_check_sm"
+        android:title="Voting"
         app:showAsAction="ifRoom"/>
 
 </menu>
