--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,35 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+
+    <!--버튼 스타일-->
+    <style name="button_square_blue" parent="@style/Widget.AppCompat.Button.Borderless">
+        <item name="android:background">@drawable/square_button_blue_selector</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="button_square_white" parent="@style/Widget.AppCompat.Button.Borderless">
+        <item name="android:background">@drawable/square_button_white_selector</item>
+        <item name="android:textColor">@color/indigo</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="button_square_gray" parent="@style/Widget.AppCompat.Button.Borderless">
+        <item name="android:background">@drawable/square_button_gray_selector</item>
+        <item name="android:textColor">@color/indigo</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 
 </resources>
